Fix service banner wrongly appearing on mobile

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -265,7 +265,7 @@ h3 {
   width: 100%;
 }
 
-/* Service */
+/* Services */
 
 .service {
   margin-block-end: 0;
@@ -307,6 +307,10 @@ h3 {
 
 .service-card .card-title {
   margin-block-end: 8px;
+}
+
+.service-list .service-banner {
+  display: none;
 }
 
 /* About */
